@@ -3,6 +3,7 @@ Auto IRC Bot 3.0: Change Log
 
 3.0 Indev
 ===============================================================================
+    * Added a ChanTopics module for advanced management of channel topics.
     * bantype is now a required configuration value.
     * Added ban() to API::IRC.
     * Changed on_cprivmsg arguments to: \%src, $channel, @msg
